--- a/sales.html
+++ b/sales.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body id="body">
+<body>
+    <div id="container">
+
+    </div>
     
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
