--- a/sales.html
+++ b/sales.html
@@ -8,10 +8,33 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <header>
+        <main>
+            <form id="cookies">
+                <fieldset>
+                    <legend>cookies-stand</legend>
+                    <label for="locationField">Location</label>
+                    <input type="text" id="locationField">
+                    <br>
+                    <label for="minCustField">minCust</label>
+                    <input type="number" id="minCustField">
+                    <br>
+                    <label for="maxCustField">maxCust</label>
+                    <input type="number" id="maxCustField">
+                    <br>
+                    <label for="avgCookiesField">avarege cookies</label>
+                    <input type="number" id="avgCookiesField" step="0.1">
+                    <br>
+                    <input type="submit" value="Add new cookies-stand">
+
+                </fieldset>
+            </form>
+        </main>
+    </header>
     <div id="container">
 
     </div>
-    
+
     <script src="js/app.js"></script>
 </body>
 </html>
